# mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
app/: __init__.py  api.py  bootstrap.py  config.py  db.py  mcp_server.py  models.py  policy.py  schemas.py  security.py  services.py  tool_registry.py
app/connectors/: __init__.py  base.py  demo.py
app/static/: dashboard.css  dashboard.js
app/templates/: index.html
examples/: client.py
tests/: test_policy.py  test_security.py  test_services.py
