[project]
name = "enterprise-mcp-gateway"
version = "0.1.0"
description = "Multi-tenant MCP health gateway with onboarding, policy enforcement, credential storage and analytics"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0,<3",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "email-validator>=2.2,<3",
  "jinja2>=3.1,<4",
  "cryptography>=43,<47",
  "httpx>=0.27,<1",
  "mcp[cli]>=1.27,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*", "examples*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css", "static/*.js"]
